Fixed <strong> weight and line height on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -44,7 +44,7 @@ p code, li code {
 }
 
 #content p {
-  line-height: 42px;
+  line-height: 48px;
 }
 
 /** {
